# dbx

./: .gitignore  README.md  README.zh-CN.md  flake.nix  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: agents-release.yml  ci.yml  release.yml
agents/: versions.json
agents/scripts/: validate_agents.py  validate_agents_test.py
apps/desktop/: vite.config.ts
apps/desktop/src/: App.vue
apps/desktop/src/components/admin/: MySqlDashboard.vue
apps/desktop/src/components/common/: ElasticsearchJsonResponsePanel.vue  JsonTree.vue
apps/desktop/src/components/config/: DriverStoreDialog.vue
apps/desktop/src/components/connection/: ConnectionDialog.vue
apps/desktop/src/components/diff/: DataCompareDialog.vue  SchemaDiffDialog.vue
apps/desktop/src/components/editor/: AiAssistant.vue  EditorSettingsDialog.vue  QueryEditor.vue  SqlPreviewPanel.vue
apps/desktop/src/components/export/: DatabaseExportDialog.vue
apps/desktop/src/components/grid/: DataGrid.vue
apps/desktop/src/components/icons/: AiProviderLogo.vue  DatabaseIcon.vue
apps/desktop/src/components/layout/: ContentArea.vue  EditorToolbar.vue
apps/desktop/src/components/mq/: MonitoringPanel.vue  MqAdminConsole.vue  NamespacesPanel.vue  PermissionsPanel.vue  PoliciesPanel.vue  ProducerConsumerPanel.vue  README.md  RawApiPanel.vue  SubscriptionsPanel.vue  TenantsPanel.vue  TopicsPanel.vue
apps/desktop/src/components/objects/: ObjectBrowser.vue
apps/desktop/src/components/redis/: RedisKeyBrowser.vue  RedisValueViewer.vue
apps/desktop/src/components/sidebar/: ConnectionTree.vue  TreeItem.vue
apps/desktop/src/components/sql-file/: SqlFileExecutionDialog.vue
apps/desktop/src/components/transfer/: DataTransferDialog.vue
apps/desktop/src/components/ui/: LightDropdown.vue
apps/desktop/src/components/vector/: VectorBrowser.vue
apps/desktop/src/composables/: useAppUpdater.ts  useDataGridActions.ts  useDataGridEditor.ts  useDataGridSelection.ts  useNavigationTargets.ts  useTauriEvents.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.ts  es.ts  it.ts  ja.ts  pt-BR.ts  zh-CN.ts  zh-TW.ts
apps/desktop/src/lib/: ai.ts  aiModelPresentation.ts  api.ts  connectionOpenTarget.ts  connectionPresentation.ts  connectionUrl.ts  connectionVisibleDatabases.ts  ddlExport.ts  errorUtils.ts  gridSelection.ts  http.ts  jdbcDialect.ts  localeOptions.ts  mcpConfigTemplates.ts  mq-http.ts  mq-tauri.ts  mqPinnedVersionOptions.ts  mqPolicyForms.ts  mqTenantForm.ts  mqTokenErrors.ts  openTabsPersistence.ts  schemaDiff.ts  sidebarActiveTabTarget.ts  sidebarNodeOrdering.ts  sidebarTreeItemLayout.ts  sqlSemanticDiagnostics.ts  sqlStatementRanges.ts  tableMetadataCapabilities.ts  tauri.ts  transferProgressState.ts  treeNodeClick.ts
apps/desktop/src/lib/__tests__/: aiModelPresentation.spec.ts  connectionOpenTarget.spec.ts  mcpConfigTemplates.spec.ts  mqListPanels.spec.ts  mqPinnedVersionOptions.spec.ts  mqPolicyForms.spec.ts  mqTenantForm.spec.ts  mqTokenErrors.spec.ts  sqlStatementRanges.spec.ts  webPath.spec.ts
apps/desktop/src/lib/backend/: http.ts  tauri.ts
apps/desktop/src/lib/common/: jsonTree.ts  safeJsonFormat.ts  shikiJsonHighlighter.ts
apps/desktop/src/lib/dataGrid/: dataGridTranspose.ts
apps/desktop/src/lib/database/: databaseCapabilitySets.ts  databaseFeatureSupport.ts  mysqlServerStatus.ts
apps/desktop/src/lib/elasticsearch/: elasticsearchJsonResponse.ts
apps/desktop/src/lib/mongo/: mongoShellCommand.ts
apps/desktop/src/lib/settings/: editorSettingsDraft.ts
apps/desktop/src/lib/sql/: sqlCompletion.ts  sqlStatementRanges.ts
apps/desktop/src/stores/: connectionStore.ts  queryStore.ts  savedSqlStore.ts  settingsStore.ts
apps/desktop/src/types/: database.ts  mq.ts
crates/dbx-core/: Cargo.toml
crates/dbx-core/assets/: database-drivers.manifest.json
crates/dbx-core/src/: agent_manager.rs  agent_service.rs  ai.rs  ai_cli_agent.rs  ai_codex_cli.rs  cli.rs  cloud_sync.rs  connection.rs  connection_secrets.rs  data_compare.rs  database_capabilities.rs  database_export.rs  lib.rs  mongo_ops.rs  object_source_sql.rs  query.rs  query_execution_sql.rs  query_result_sql.rs  schema.rs  schema_diff.rs  sql.rs  sql_editability.rs  storage.rs  table_export.rs  table_import.rs  table_structure_sql.rs  transfer.rs  xlsx_export.rs
crates/dbx-core/src/db/: agent_driver.rs  elasticsearch_driver.rs  mod.rs  mongo_driver.rs  mysql.rs  postgres.rs  proxy_tunnel.rs  redis_driver.rs  sqlserver.rs  ssh_tunnel.rs  vector_driver.rs
crates/dbx-core/src/models/: connection.rs
crates/dbx-core/src/mq/: README.md  auth.rs  config.rs  mod.rs  port.rs  service.rs  token.rs  types.rs  util.rs
crates/dbx-core/src/mq/adapters/: mod.rs  pulsar.rs  pulsar_version.rs
crates/dbx-core/src/schema/providers/: native.rs
crates/dbx-core/tests/: live_mongodb_aggregate.rs  live_mysql57.rs  mq_token.rs
crates/dbx-web/: Cargo.toml
crates/dbx-web/src/: main.rs
crates/dbx-web/src/routes/: connection.rs  mod.rs  mongo.rs  mq.rs  query.rs  transfer.rs
docs/: mq-quick-start.md
docs/app/[lang]/drivers/: DriversClient.tsx
docs/data/: contributors.json
docs/lib/: agentRegistry.test.ts  agentRegistry.ts
scripts/: check-mq-integration.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  connection.rs  database_export.rs  external_db.rs  mcp.rs  mcp_bridge.rs  mod.rs  mongo_cmd.rs  mq_cmd.rs  table_export.rs  table_import.rs  transfer.rs  update.rs
src/components/grid/: DataGrid.vue
src/i18n/locales/: en.ts  zh-CN.ts
src/lib/: columnFormatter.ts
src/stores/: settingsStore.ts
tests/: columnFormatter.test.ts  settingsStore.test.ts
(+9 files in other folders)
