[package]
name = "dbx"
version = "0.5.51"
description = "Open-source database management tool"
authors = ["skyler"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dbx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["duckdb-bundled", "mq-admin", "sqlite-sqlcipher"]
duckdb-bundled = ["duckdb", "dbx-core/duckdb-bundled"]
mq-admin = ["dbx-core/mq-admin"]
sqlite-sqlcipher = ["dbx-core/sqlite-sqlcipher"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
redis = { version = "0.32.2", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "cluster-async"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
portpicker = "0.1.1"
duckdb = { version = "1.3.2", optional = true }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
mongodb = "3.2.5"
percent-encoding = "2"
russh = "0.60"
csv = "1.4.0"
calamine = "0.30.1"
zip = "4.6.1"
dbx-core = { path = "../crates/dbx-core", default-features = false }
axum = { version = "0.8", features = ["ws"] }
font-kit = "0.14.3"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication"] }
