[package]
name = "dbx-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["duckdb-bundled", "mq-admin"]
duckdb-bundled = ["duckdb/bundled"]
mq-admin = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1"
rayon = "1"
percent-encoding = "2"
encoding_rs = "0.8"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "backup"] }
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls", "client_ed25519", "chrono", "rust_decimal"] }
sqlparser = { version = "0.62.0", features = ["visitor"] }
redis = { version = "0.32.2", features = ["tokio-comp", "tls-rustls", "tls-rustls-insecure", "tokio-rustls-comp", "sentinel", "cluster-async"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2"
duckdb = { version = "1.3.2", optional = true }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls", "sql-browser-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
futures = "0.3"
iana-time-zone = "0.1"
mongodb = "3.2.5"
russh = "0.60"
pageant = "0.2"
portpicker = "0.1.1"
csv = "1"
calamine = "0.30.1"
base64 = "0.22"
jsonwebtoken = "9"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
async-trait = "0.1"
bytes = "1"
font-kit = "0.14.3"
zip = { version = "4", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.32", features = ["system"] }
